language/move-lang/tests/move_check/parser/byte_string_invalid_escaped_sequence.exp
error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_invalid_escaped_sequence.move:3:15
  │
3 │         b"libr\a"
  │               ^^ Invalid escape sequence: '\a'

