language/move-lang/tests/move_check/parser/byte_string_invalid_escaped_sequence.move
module 0x8675309::M {
    public fun bad_value1(): vector<u8> {
        b"libr\a"
    }
}
